--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --light-cyan: hsl(193, 38%, 86%);
+  --neon-green: hsl(150, 100%, 66%);
+  --grayish-blue: hsl(217, 19%, 38%);
+  --dark-grayish-blue: hsl(217, 19%, 24%);
+  --dark-blue: hsl(218, 23%, 16%);
+}
+
 body {
   width: 100%;
   height: 100vh;
@@ -6,6 +19,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: var(--dark-blue);
+  font-family: "Manrope", sans-serif;
 }
 
 .advice-container {
@@ -13,19 +28,65 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: pink;
-  width: 40%;
-  height: 40%;
+  background-color: var(--dark-grayish-blue);
+  color: var(--light-cyan);
+  width: 50%;
+  height: 50%;
   border-radius: 15px;
+}
+
+.advice-body {
+  font-size: 28px;
+  font-weight: 800;
+  text-align: center;
+  padding: 10px 50px 20px;
+}
+
+.advice-id {
+  color: var(--neon-green);
+  margin-bottom: 5%;
+}
+
+.divider-desktop {
+  display: block;
+  margin-top: 5%;
+}
+
+.divider-mobile {
+  display: none;
 }
 
 button {
     width: 80px;
     height: 80px;
     border-radius: 45px;
-    border: dotted pink 2px;
-    color: pink;
-    background-color: purple;
+    background-color: var(--neon-green);
+    position: relative;
+    bottom: 40px;
+  }
 
+button:hover {
+  box-shadow:0px 0px 10px var(--neon-green);
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+
+/* Media queries */
+@media screen and (max-width: 900px) {
+  .divider-desktop {
+    display: none;
+  }
+  .divider-mobile {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .divider-mobile {
+    display: none;
+  }
 }
 
