--- a/style.css
+++ b/style.css
@@ -63,13 +63,12 @@ button {
     background-color: var(--neon-green);
     position: relative;
     bottom: 40px;
+    border: none;
+    cursor: pointer;
   }
 
 button:hover {
   box-shadow:0px 0px 10px var(--neon-green);
-  -moz-transition: all 0.2s ease-in;
-  -o-transition: all 0.2s ease-in;
-  -webkit-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
 
